@@ -1,3 +1,12 @@
+2019-12-20  Roman Zhuykov  <zhroma@ispras.ru>
+
+	Backport from mainline
+	2019-12-13  Roman Zhuykov  <zhroma@ispras.ru>
+
+	PR rtl-optimization/92591
+	* gcc.dg/pr92951-1.c: New test.
+	* gcc.dg/pr92951-2.c: New test.
+
 2019-12-17  Andreas Krebbel  <krebbel@linux.ibm.com>
 
 	Backport from mainline
